set(TESTS_BINDIR ${CMAKE_CURRENT_BINARY_DIR}/bin)

add_subdirectory(allocator)
add_subdirectory(complex)
add_subdirectory(global_variable)
add_subdirectory(link_static_fat_bin)
add_subdirectory(linker_outlined_func)
add_subdirectory(math)
add_subdirectory(private)
add_subdirectory(target_task)

if (ENABLE_Fortran)
  add_subdirectory(fortran_use_device_ptr)
  add_subdirectory(fortran_allocator)
endif()
