set(TESTS_BINDIR ${CMAKE_CURRENT_BINARY_DIR}/bin)

add_subdirectory(allocator)
add_subdirectory(complex)
add_subdirectory(global_variable)
add_subdirectory(linking)
add_subdirectory(math)
add_subdirectory(private)
add_subdirectory(target_task)
add_subdirectory(omphost)
add_subdirectory(reduction)
add_subdirectory(implict_async)
add_subdirectory(map)

if (ENABLE_Fortran)
  add_subdirectory(fortran_use_device_ptr)
  add_subdirectory(fortran_allocator)
endif()
